# team-roadmap-capacity-planner

./: .eslintrc.js  .gitignore  LICENSE  README.md  check-prerequisites.sh  create-basic-icon.js  eslint.config.js  index.html  package.json  package.json.tauri  pnpm-lock.yaml  pnpm-workspace.yaml  setup-tauri.sh  tailwind.config.js  vite.config.js  vitest.config.js
.claude/: CLAUDE-COMPONENTS.md  CLAUDE-DEV.md  CLAUDE-DOMAIN.md  CLAUDE-PROMPTS.md  CLAUDE-QUICKREF.md  CLAUDE-REVIEW.md  CLAUDE-TESTING.md  README.md
.github/workflows/: release.yml  test-timeline-bars.yml
docs/: CODING_STANDARDS.md  MACOS_INSTALLATION.md  PRD.md  RELEASES.md  SCREENSHOTS.md  playwright-visual-tests.md  typescript-jest-best-practices.md
docs/screenshots/: README.md
scripts/: generate-examples-screenshots.js  generate-pdf.js  generate-screenshot.js  generate-updated-screenshots.js  test-release.sh  visual-regression-tests.js
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs
src/components/: ExampleSwitcher.jsx  IntegratedRoadmapEditor.jsx  MarkdownEditor.jsx  NavigationControls.jsx  RoadmapPlanner.jsx  StreamComponents.jsx  StreamContainer.jsx  StreamItem.jsx  TeamCapacity.jsx  TimelineHeader.jsx
src/data/: README.md  demoData.js  roadmap-daily.md  roadmap-quarterly.md  roadmap.md
src/domain/: adaptiveTimelineScaling.js  timelineParser.js
src/examples/: icon-demo.jsx
src/hooks/: useAutoHide.js  useKeyboardNavigation.js  useZoom.js
src/styles/: globals.css
src/test/: setup.js
src/tests/: README.md  (+1 more)
(+23 files in other folders)
